--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,13 @@
-<mat-card class="container">
-  <mat-card-header>
-    <a mat-raised-button color="primary" routerLink="list">Home</a>
-    <a mat-raised-button color="primary" routerLink="reports">Relatório</a>
-    <a mat-raised-button color="primary" routerLink="config">Configuração</a>
-  </mat-card-header>
-  <mat-card-content>
+    <mat-toolbar color="primary">
+      <mat-toolbar-row>
+        <span>Controle de Estacionamento</span>
+        <span class="spacer"></span>
+        <div class="top-button-row">
+          <a mat-raised-button routerLink="list">Inicio</a>
+          <a mat-raised-button routerLink="reports">Relatórios</a>
+          <a mat-raised-button routerLink="config">Configurações</a>
+        </div>
+      </mat-toolbar-row>
+    </mat-toolbar>
+
     <router-outlet></router-outlet>
-  </mat-card-content>
-</mat-card>
