--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,6 +2,35 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+.sidenav-container {
+  height: 100%;
+}
+
+.sidenav {
+  width: 200px;
+  box-shadow: 3px 0 6px rgba(0, 0, 0, 0.24);
+}
+
+.hidden {
+  display: none;
+}
+
+.spacer {
+  flex: 1 1 auto;
+}
+
+mat-toolbar a {
+  display: inline-block;
+  margin: 0 10px;
+  color: white;
+  text-decoration: none;
+}
+
+.data-table {
+  width: 80%;
+  margin: 20px auto;
+}
+
 table {
   width: 100%;
 }
@@ -14,7 +43,10 @@ table {
 td, th {
   width: 25%;
 }
+.icons {
+  padding: 0 14px;
+}
 
-.container {
-  max-width: 400px;
+.top-button-row a {
+  margin-right: 8px;
 }
