--- a/src/app/list.cars/list.cars.component.html
+++ b/src/app/list.cars/list.cars.component.html
@@ -3,12 +3,12 @@
   <table class="example-full-width" cellspacing="0">
     <tr>
       <td>
-        <button mat-raised-button (click)="openDialog()">Pick one</button>
+        <button mat-raised-button (click)="openDialog()">Entrada de Carro</button>
       </td>
       <td>
         <mat-form-field>
-          <mat-label>Filter</mat-label>
-          <input matInput (keyup)="applyFilter($event)" placeholder="Ex. Mia">
+          <mat-label>Filtro</mat-label>
+          <input matInput (keyup)="applyFilter($event)" placeholder="Digite a placa do carro ou modelo.">
         </mat-form-field>
       </td>
     </tr>
